--- a/address-book-ui/src/app/contacts/contact-list/contact-list.component.html
+++ b/address-book-ui/src/app/contacts/contact-list/contact-list.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="contact-list">
-  <div class="row" *ngFor="let contact of data">
+  <div class="row" *ngFor="let contact of contacts">
     <app-contact [contact]="contact"></app-contact>
   </div>
 </div>
