--- a/address-book-ui/src/app/contacts/contact/contact.component.scss
+++ b/address-book-ui/src/app/contacts/contact/contact.component.scss
@@ -1,4 +1,36 @@
-.contact {
+:host {
   width: 100%;
+}
+
+.contact {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 80px;
   padding: 10px;
+  border-bottom: 1px solid #eee;
+
+  &__avatar {
+    width: 60px;
+    height: 100%;
+    margin-right: 10px;
+    background-color: #eee;
+    border-radius: 50%;
+    font-size: 25px;
+    color: #aaa;
+    line-height: 60px;
+    text-align: center;
+  }
+
+  &__details {
+    width: 470px;
+    margin-right: 10px;
+
+    .surname,
+    .first-name {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+  }
 }
