--- a/address-book-ui/src/app/contacts/contact-list/contact-list.component.scss
+++ b/address-book-ui/src/app/contacts/contact-list/contact-list.component.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   background-color: #eee;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 
   h1 {
     margin-bottom: 0;
