--- a/address-book-ui/src/app/contacts/edit-contact/edit-contact.component.html
+++ b/address-book-ui/src/app/contacts/edit-contact/edit-contact.component.html
@@ -1,1 +1,12 @@
-<p>edit-contact works!</p>
+<div class="header row">
+  <a routerLink="/contacts">Back</a>
+  <h1>Edit contact</h1>
+</div>
+
+<div>
+  <app-contact-form
+    [contact]="contact"
+    (onValidContact)="onValidContact($event)"
+    (hasChanges)="onHasChanges($event)"
+  ></app-contact-form>
+</div>
