--- a/address-book-ui/src/app/not-found/not-found.component.html
+++ b/address-book-ui/src/app/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div class="header row">
+  <a routerLink="/contacts">Home</a>
+  <h1>Not found!</h1>
+</div>
+
+<p>The page your are looking for does not exist.</p>
