--- a/address-book-ui/src/styles.scss
+++ b/address-book-ui/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./variables";
 
 html,
 body {
@@ -8,4 +9,11 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #efefef;
+}
+
+.container {
+  max-width: $contentWidth;
+  // height: 100%;
+  background-color: white;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
