--- a/address-book-ui/src/app/contacts/components/contact-form-container.component.html
+++ b/address-book-ui/src/app/contacts/components/contact-form-container.component.html
@@ -1,12 +1,15 @@
 <div class="header row">
   <a routerLink="/contacts">Back</a>
-  <h1>Edit contact</h1>
+  <h1>{{ title }}</h1>
 </div>
 
 <div>
+  <div *ngIf="error" class="alert alert-danger" role="alert">
+    {{ error }}
+  </div>
   <app-contact-form
     [contact]="contact"
     (onValidContact)="onValidContact($event)"
-    (hasChanges)="onHasChanges($event)"
+    (onChanges)="onChanges($event)"
   ></app-contact-form>
 </div>
