--- a/address-book-ui/src/app/contacts/components/contact-form/contact-form.component.html
+++ b/address-book-ui/src/app/contacts/components/contact-form/contact-form.component.html
@@ -32,10 +32,7 @@
       <mat-label>* Email</mat-label>
       <input matInput formControlName="email" />
       <mat-error
-        *ngIf="
-          contactForm.controls.email.hasError('email') &&
-          !contactForm.controls.email.hasError('required')
-        "
+        *ngIf="contactForm.controls.email.hasError('email') && !contactForm.controls.email.hasError('required')"
       >
         Please enter a valid email address
       </mat-error>
@@ -51,13 +48,7 @@
   <div class="form-group datepicker">
     <mat-form-field>
       <mat-label>* Date of Birth</mat-label>
-      <input
-        matInput
-        readonly
-        [max]="yesterday"
-        formControlName="dob"
-        [matDatepicker]="picker"
-      />
+      <input matInput readonly [max]="yesterday" formControlName="dob" [matDatepicker]="picker" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
       <mat-error *ngIf="contactForm.controls.dob.hasError('required')">
@@ -67,13 +58,6 @@
   </div>
 
   <div class="form-group">
-    <button
-      [disabled]="!contactForm.valid || !hasChanges"
-      mat-raised-button
-      color="primary"
-      type="submit"
-    >
-      Save
-    </button>
+    <button [disabled]="!contactForm.valid || !hasChanges" mat-raised-button color="primary" type="submit">Save</button>
   </div>
 </form>
