--- a/address-book-ui/src/app/contacts/components/contact/contact.component.html
+++ b/address-book-ui/src/app/contacts/components/contact/contact.component.html
@@ -11,7 +11,7 @@
     </div>
     <div>
       {{ contact.email }}
-      {{ contact.dob }}
+      {{ contact.dob | date }}
     </div>
   </div>
   <div class="contact__controls">
