--- a/address-book-ui/src/app/contacts/components/contact-form/contact-form.component.html
+++ b/address-book-ui/src/app/contacts/components/contact-form/contact-form.component.html
@@ -39,16 +39,13 @@
       <mat-error *ngIf="contactForm.controls.email.hasError('required')">
         Email is <strong>required</strong>
       </mat-error>
-      <!-- <mat-error *ngIf="contactForm.controls.email.hasError('invalidAsync')">
-        Contact with this email already exists
-      </mat-error> -->
     </mat-form-field>
   </div>
 
   <div class="form-group datepicker">
     <mat-form-field>
       <mat-label>* Date of Birth</mat-label>
-      <input matInput readonly [max]="yesterday" formControlName="dob" [matDatepicker]="picker" />
+      <input matInput readonly [max]="today" formControlName="dob" [matDatepicker]="picker" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
       <mat-error *ngIf="contactForm.controls.dob.hasError('required')">
