Moved guards and routes to routing folder

--- a/address-book-ui/src/app/contacts/components/contact-form-container.component.html
+++ b/address-book-ui/src/app/contacts/components/contact-form-container.component.html
@@ -4,6 +4,7 @@
 </div>
 
 <div>
+  <!-- Bootstrap alerts -->
   <div *ngFor="let error of errors" class="alert alert-danger" role="alert">
     {{ error.errorMessage }}
   </div>
