--- a/address-book-ui/src/app/contacts/components/contact-list/contact-list.component.html
+++ b/address-book-ui/src/app/contacts/components/contact-list/contact-list.component.html
@@ -1,7 +1,4 @@
-<div class="header row">
-  <h1>Contacts</h1>
-  <a routerLink="/new"> New</a>
-</div>
+<app-header-main [title]="title"></app-header-main>
 
 <div class="contact-list">
   <div class="contact row" *ngFor="let contact of contacts$ | async">
