--- a/address-book-ui/src/app/not-found/not-found.component.html
+++ b/address-book-ui/src/app/not-found/not-found.component.html
@@ -1,6 +1,7 @@
-<div class="header row">
-  <a routerLink="/contacts">Home</a>
-  <h1>Not found!</h1>
-</div>
+<app-header-details [title]="title"></app-header-details>
 
-<p>The page your are looking for does not exist.</p>
+<div class="row">
+  <div class="col-12">
+    <p>The page your are looking for does not exist.</p>
+  </div>
+</div>
