Added material module, Lint

--- a/address-book-ui/src/app/contacts/components/contact-form-container.component.html
+++ b/address-book-ui/src/app/contacts/components/contact-form-container.component.html
@@ -9,8 +9,8 @@
 
     <app-contact-form
       [contact]="contact"
-      (onValidContact)="onValidContact($event)"
-      (onChanges)="onChanges($event)"
+      (contactSubmitted)="contactSubmitted($event)"
+      (formChanged)="formChanged($event)"
     ></app-contact-form>
   </div>
 </div>
